script/src/main/java/ca/phon/script/params/ScriptParamsParser.java
/*
 * Phon - An open source tool for research in phonology.
 * Copyright (C) 2008 The Phon Project, Memorial University <http://phon.ling.mun.ca>
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
// $ANTLR 3.4 C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g 2012-08-27 12:44:10

package ca.phon.script.params;

import java.util.ArrayList;
import java.util.List;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTree;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteEarlyExitException;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;
import org.apache.commons.lang3.StringUtils;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ScriptParamsParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOLEAN", "EscapeSequence", "HexDigit", "ID", "INT", "LETTER", "OctalEscape", "StringLiteral", "UnicodeEscape", "WS", "','", "';'", "'='", "'bool'", "'enum'", "'label'", "'multibool'", "'params'", "'separator'", "'string'", "'{'", "'|'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int BOOLEAN=4;
    public static final int EscapeSequence=5;
    public static final int HexDigit=6;
    public static final int ID=7;
    public static final int INT=8;
    public static final int LETTER=9;
    public static final int OctalEscape=10;
    public static final int StringLiteral=11;
    public static final int UnicodeEscape=12;
    public static final int WS=13;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ScriptParamsParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ScriptParamsParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ScriptParamsParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g"; }


    /** The list of script params */
    private List<ScriptParam> scriptParams = new ArrayList<ScriptParam>();

    public ScriptParam[] getScriptParams() {
    	return scriptParams.toArray(new ScriptParam[0]);
    }


    public static class params_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "params"
    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:28:1: params : 'params' '=' paramDef ( ',' paramDef )* ';' -> ^( 'params' ( paramDef )+ ) ;
    public final ScriptParamsParser.params_return params() throws RecognitionException {
        ScriptParamsParser.params_return retval = new ScriptParamsParser.params_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal1=null;
        Token char_literal2=null;
        Token char_literal4=null;
        Token char_literal6=null;
        ScriptParamsParser.paramDef_return paramDef3 =null;

        ScriptParamsParser.paramDef_return paramDef5 =null;


        CommonTree string_literal1_tree=null;
        CommonTree char_literal2_tree=null;
        CommonTree char_literal4_tree=null;
        CommonTree char_literal6_tree=null;
        RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
        RewriteRuleTokenStream stream_15=new RewriteRuleTokenStream(adaptor,"token 15");
        RewriteRuleTokenStream stream_16=new RewriteRuleTokenStream(adaptor,"token 16");
        RewriteRuleTokenStream stream_14=new RewriteRuleTokenStream(adaptor,"token 14");
        RewriteRuleSubtreeStream stream_paramDef=new RewriteRuleSubtreeStream(adaptor,"rule paramDef");
        try {
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:29:2: ( 'params' '=' paramDef ( ',' paramDef )* ';' -> ^( 'params' ( paramDef )+ ) )
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:29:4: 'params' '=' paramDef ( ',' paramDef )* ';'
            {
            string_literal1=(Token)match(input,21,FOLLOW_21_in_params48);  
            stream_21.add(string_literal1);


            char_literal2=(Token)match(input,16,FOLLOW_16_in_params50);  
            stream_16.add(char_literal2);


            pushFollow(FOLLOW_paramDef_in_params52);
            paramDef3=paramDef();

            state._fsp--;

            stream_paramDef.add(paramDef3.getTree());

            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:29:26: ( ',' paramDef )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==14) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:29:27: ',' paramDef
            	    {
            	    char_literal4=(Token)match(input,14,FOLLOW_14_in_params55);  
            	    stream_14.add(char_literal4);


            	    pushFollow(FOLLOW_paramDef_in_params57);
            	    paramDef5=paramDef();

            	    state._fsp--;

            	    stream_paramDef.add(paramDef5.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            char_literal6=(Token)match(input,15,FOLLOW_15_in_params61);  
            stream_15.add(char_literal6);


            // AST REWRITE
            // elements: 21, paramDef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 29:46: -> ^( 'params' ( paramDef )+ )
            {
                // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:29:49: ^( 'params' ( paramDef )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_21.nextNode()
                , root_1);

                if ( !(stream_paramDef.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_paramDef.hasNext() ) {
                    adaptor.addChild(root_1, stream_paramDef.nextTree());

                }
                stream_paramDef.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "params"


    public static class paramDef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "paramDef"
    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:32:1: paramDef : '{' paramSubDef '}' ;
    public final ScriptParamsParser.paramDef_return paramDef() throws RecognitionException {
        ScriptParamsParser.paramDef_return retval = new ScriptParamsParser.paramDef_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal7=null;
        Token char_literal9=null;
        ScriptParamsParser.paramSubDef_return paramSubDef8 =null;


        CommonTree char_literal7_tree=null;
        CommonTree char_literal9_tree=null;

        try {
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:33:2: ( '{' paramSubDef '}' )
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:33:4: '{' paramSubDef '}'
            {
            root_0 = (CommonTree)adaptor.nil();


            char_literal7=(Token)match(input,24,FOLLOW_24_in_paramDef82); 
            char_literal7_tree = 
            (CommonTree)adaptor.create(char_literal7)
            ;
            adaptor.addChild(root_0, char_literal7_tree);


            pushFollow(FOLLOW_paramSubDef_in_paramDef84);
            paramSubDef8=paramSubDef();

            state._fsp--;

            adaptor.addChild(root_0, paramSubDef8.getTree());

            char_literal9=(Token)match(input,26,FOLLOW_26_in_paramDef86); 
            char_literal9_tree = 
            (CommonTree)adaptor.create(char_literal9)
            ;
            adaptor.addChild(root_0, char_literal9_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "paramDef"


    public static class paramSubDef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "paramSubDef"
    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:36:1: paramSubDef : ( stringDef | booleanDef | enumDef | separatorDef | multiBoolDef | labelDef );
    public final ScriptParamsParser.paramSubDef_return paramSubDef() throws RecognitionException {
        ScriptParamsParser.paramSubDef_return retval = new ScriptParamsParser.paramSubDef_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        ScriptParamsParser.stringDef_return stringDef10 =null;

        ScriptParamsParser.booleanDef_return booleanDef11 =null;

        ScriptParamsParser.enumDef_return enumDef12 =null;

        ScriptParamsParser.separatorDef_return separatorDef13 =null;

        ScriptParamsParser.multiBoolDef_return multiBoolDef14 =null;

        ScriptParamsParser.labelDef_return labelDef15 =null;



        try {
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:37:2: ( stringDef | booleanDef | enumDef | separatorDef | multiBoolDef | labelDef )
            int alt2=6;
            switch ( input.LA(1) ) {
            case 23:
                {
                alt2=1;
                }
                break;
            case 17:
                {
                alt2=2;
                }
                break;
            case 18:
                {
                alt2=3;
                }
                break;
            case 22:
                {
                alt2=4;
                }
                break;
            case 20:
                {
                alt2=5;
                }
                break;
            case 19:
                {
                alt2=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:37:4: stringDef
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_stringDef_in_paramSubDef98);
                    stringDef10=stringDef();

                    state._fsp--;

                    adaptor.addChild(root_0, stringDef10.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:38:4: booleanDef
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_booleanDef_in_paramSubDef103);
                    booleanDef11=booleanDef();

                    state._fsp--;

                    adaptor.addChild(root_0, booleanDef11.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:39:4: enumDef
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_enumDef_in_paramSubDef108);
                    enumDef12=enumDef();

                    state._fsp--;

                    adaptor.addChild(root_0, enumDef12.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:40:4: separatorDef
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_separatorDef_in_paramSubDef113);
                    separatorDef13=separatorDef();

                    state._fsp--;

                    adaptor.addChild(root_0, separatorDef13.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:41:4: multiBoolDef
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_multiBoolDef_in_paramSubDef118);
                    multiBoolDef14=multiBoolDef();

                    state._fsp--;

                    adaptor.addChild(root_0, multiBoolDef14.getTree());

                    }
                    break;
                case 6 :
                    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:42:4: labelDef
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_labelDef_in_paramSubDef123);
                    labelDef15=labelDef();

                    state._fsp--;

                    adaptor.addChild(root_0, labelDef15.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "paramSubDef"


    public static class separatorDef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "separatorDef"
    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:45:1: separatorDef : 'separator' ',' desc= StringLiteral ( ',' collapsed= BOOLEAN )? ;
    public final ScriptParamsParser.separatorDef_return separatorDef() throws RecognitionException {
        ScriptParamsParser.separatorDef_return retval = new ScriptParamsParser.separatorDef_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token desc=null;
        Token collapsed=null;
        Token string_literal16=null;
        Token char_literal17=null;
        Token char_literal18=null;

        CommonTree desc_tree=null;
        CommonTree collapsed_tree=null;
        CommonTree string_literal16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree char_literal18_tree=null;

        try {
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:46:2: ( 'separator' ',' desc= StringLiteral ( ',' collapsed= BOOLEAN )? )
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:46:4: 'separator' ',' desc= StringLiteral ( ',' collapsed= BOOLEAN )?
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal16=(Token)match(input,22,FOLLOW_22_in_separatorDef135); 
            string_literal16_tree = 
            (CommonTree)adaptor.create(string_literal16)
            ;
            adaptor.addChild(root_0, string_literal16_tree);


            char_literal17=(Token)match(input,14,FOLLOW_14_in_separatorDef137); 
            char_literal17_tree = 
            (CommonTree)adaptor.create(char_literal17)
            ;
            adaptor.addChild(root_0, char_literal17_tree);


            desc=(Token)match(input,StringLiteral,FOLLOW_StringLiteral_in_separatorDef143); 
            desc_tree = 
            (CommonTree)adaptor.create(desc)
            ;
            adaptor.addChild(root_0, desc_tree);


            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:46:41: ( ',' collapsed= BOOLEAN )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==14) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:46:42: ',' collapsed= BOOLEAN
                    {
                    char_literal18=(Token)match(input,14,FOLLOW_14_in_separatorDef146); 
                    char_literal18_tree = 
                    (CommonTree)adaptor.create(char_literal18)
                    ;
                    adaptor.addChild(root_0, char_literal18_tree);


                    collapsed=(Token)match(input,BOOLEAN,FOLLOW_BOOLEAN_in_separatorDef152); 
                    collapsed_tree = 
                    (CommonTree)adaptor.create(collapsed)
                    ;
                    adaptor.addChild(root_0, collapsed_tree);


                    }
                    break;

            }



            		SeparatorScriptParam param = new SeparatorScriptParam(StringUtils.strip((desc!=null?desc.getText():null), "\""));
            		if(collapsed != null)
            		{
            			param.setCollapsed(Boolean.parseBoolean((collapsed!=null?collapsed.getText():null)));
            		}
            		scriptParams.add(param);
            		

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "separatorDef"


    public static class stringDef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stringDef"
    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:57:1: stringDef : 'string' ',' ID ',' def= StringLiteral ',' desc= StringLiteral ;
    public final ScriptParamsParser.stringDef_return stringDef() throws RecognitionException {
        ScriptParamsParser.stringDef_return retval = new ScriptParamsParser.stringDef_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token def=null;
        Token desc=null;
        Token string_literal19=null;
        Token char_literal20=null;
        Token ID21=null;
        Token char_literal22=null;
        Token char_literal23=null;

        CommonTree def_tree=null;
        CommonTree desc_tree=null;
        CommonTree string_literal19_tree=null;
        CommonTree char_literal20_tree=null;
        CommonTree ID21_tree=null;
        CommonTree char_literal22_tree=null;
        CommonTree char_literal23_tree=null;

        try {
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:58:2: ( 'string' ',' ID ',' def= StringLiteral ',' desc= StringLiteral )
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:58:4: 'string' ',' ID ',' def= StringLiteral ',' desc= StringLiteral
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal19=(Token)match(input,23,FOLLOW_23_in_stringDef170); 
            string_literal19_tree = 
            (CommonTree)adaptor.create(string_literal19)
            ;
            adaptor.addChild(root_0, string_literal19_tree);


            char_literal20=(Token)match(input,14,FOLLOW_14_in_stringDef172); 
            char_literal20_tree = 
            (CommonTree)adaptor.create(char_literal20)
            ;
            adaptor.addChild(root_0, char_literal20_tree);


            ID21=(Token)match(input,ID,FOLLOW_ID_in_stringDef174); 
            ID21_tree = 
            (CommonTree)adaptor.create(ID21)
            ;
            adaptor.addChild(root_0, ID21_tree);


            char_literal22=(Token)match(input,14,FOLLOW_14_in_stringDef176); 
            char_literal22_tree = 
            (CommonTree)adaptor.create(char_literal22)
            ;
            adaptor.addChild(root_0, char_literal22_tree);


            def=(Token)match(input,StringLiteral,FOLLOW_StringLiteral_in_stringDef182); 
            def_tree = 
            (CommonTree)adaptor.create(def)
            ;
            adaptor.addChild(root_0, def_tree);


            char_literal23=(Token)match(input,14,FOLLOW_14_in_stringDef184); 
            char_literal23_tree = 
            (CommonTree)adaptor.create(char_literal23)
            ;
            adaptor.addChild(root_0, char_literal23_tree);


            desc=(Token)match(input,StringLiteral,FOLLOW_StringLiteral_in_stringDef190); 
            desc_tree = 
            (CommonTree)adaptor.create(desc)
            ;
            adaptor.addChild(root_0, desc_tree);



            		StringScriptParam param = new StringScriptParam((ID21!=null?ID21.getText():null), 
            			StringUtils.strip((desc!=null?desc.getText():null), "\""), StringUtils.strip((def!=null?def.getText():null), "\""));
            		scriptParams.add(param);
            		

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stringDef"


    public static class booleanDef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "booleanDef"
    // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:66:1: booleanDef : 'bool' ',' ID ',' def= BOOLEAN ',' lbl= StringLiteral ',' desc= StringLiteral ;
    public final ScriptParamsParser.booleanDef_return booleanDef() throws RecognitionException {
        ScriptParamsParser.booleanDef_return retval = new ScriptParamsParser.booleanDef_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token def=null;
        Token lbl=null;
        Token desc=null;
        Token string_literal24=null;
        Token char_literal25=null;
        Token ID26=null;
        Token char_literal27=null;
        Token char_literal28=null;
        Token char_literal29=null;

        CommonTree def_tree=null;
        CommonTree lbl_tree=null;
        CommonTree desc_tree=null;
        CommonTree string_literal24_tree=null;
        CommonTree char_literal25_tree=null;
        CommonTree ID26_tree=null;
        CommonTree char_literal27_tree=null;
        CommonTree char_literal28_tree=null;
        CommonTree char_literal29_tree=null;

        try {
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:67:2: ( 'bool' ',' ID ',' def= BOOLEAN ',' lbl= StringLiteral ',' desc= StringLiteral )
            // C:\\Users\\ghedlund\\Documents\\Phon\\gitprojects\\phon-old\\src\\ca\\phon\\engines\\search\\script\\params\\ScriptParams.g:67:4: 'bool' ',' ID ',' def= BOOLEAN ',' lbl= StringLiteral ',' desc= StringLiteral
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal24=(Token)match(input,17,FOLLOW_17_in_booleanDef207); 
            string_literal24_tree = 
            (CommonTree)adaptor.create(string_literal24)
            ;
            adaptor.addChild(root_0, string_literal24_tree);


            char_literal25=(Token)match(input,14,FOLLOW_14_in_booleanDef209); 
            char_literal25_tree = 
            (CommonTree)adaptor.create(char_literal25)
            ;
            adaptor.addChild(root_0, char_literal25_tree);


            ID26=(Token)match(input,ID,FOLLOW_ID_in_booleanDef211); 
            ID26_tree = 
            (CommonTree)adaptor.create(ID26)
            ;
            adaptor.addChild(root_0, ID26_tree);


            char_literal27=(Token)match(input,14,FOLLOW_14_in_booleanDef213); 
            char_literal27_tree = 
            (CommonTree)adaptor.create(char_literal27)
            ;
            adaptor.addChild(root_0, char_literal27_tree);


            def=(Token)match(input,BOOLEAN,FOLLOW_BOOLEAN_in_booleanDef219); 
            def_tree = 
            (CommonTree)adaptor.create(def)
            ;
            adaptor.addChild(root_0, def_tree);


            char_literal28=(Token)match(input,14,FOLLOW_14_in_booleanDef221); 
            char_literal28_tree = 
            (CommonTree)adaptor.create(char_literal28)
            ;
            adaptor.addChild(root_0, char_literal28_tree);


            lbl=(Token)match(input,StringLiteral,FOLLOW_StringLiteral_in_booleanDef227); 
            lbl_tree = 
            (CommonTree)adaptor.create(lbl)
            ;
            adaptor.addChild(root_0, lbl_tree);


            char_literal29=(Token)match(input,14,FOLLOW_14_in_booleanDef229); 
            char_literal29_tree = 
            (CommonTree)adaptor.create(char_literal29)
            ;
            adaptor.addChild(root_0, char_literal29_tree);

